--- a/Mision 2 HT/Unidad_2_Actividad_2_Ejercicio_en_clase_Iris.ipynb
+++ b/Mision 2 HT/Unidad_2_Actividad_2_Ejercicio_en_clase_Iris.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "PZicU1MyifAM"
       },
@@ -75,7 +75,7 @@
         "id": "eXxwxmv335OD",
         "outputId": "4dda20b8-30b1-4b95-f2af-3c2cda24b8b4"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -140,7 +140,7 @@
         "id": "8anMjLuhsiUK",
         "outputId": "a2f90faf-d6bb-4413-cd42-849d29638514"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
           "height": 490
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +275,7 @@
         "id": "di_7fnTcGJlR",
         "outputId": "204fb666-837c-40b0-e61a-3f101fd7d67f"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -292,7 +292,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[texto del enlace](https://)"
+        "\n",
+        "\n",
+        "¿Puede un modelo agrupar datos con base en estas medidas?\n",
+        "\n",
+        "Sí, un modelo de agrupamiento puede agrupar datos basándose únicamente en medidas. Los modelos de clustering se utilizan para encontrar grupos naturales o patrones inherentes en los datos, sin necesidad de etiquetas predefinidas.\n",
+        "\n",
+        "¿Si no se tuviese la especie de la flor como dato en el dataset, se podría encontrar cuantas especies existen?\n",
+        "\n",
+        "Sí, se podría usar un modelo de clustering para intentar identificar diferentes grupos o especies de flores en el dataset de iris, incluso si no se tiene la etiqueta de especie como dato. Los algoritmos de clustering, como K-Means, DBSCAN, o Mean Shift, pueden agrupar los datos en grupos basándose únicamente en las características de las flores.\n",
+        "\n",
+        "¿Cómo se emplearía la medida de distancia para ese fin?\n",
+        "\n",
+        "la medida de distancia se usaria en el proceso de clustering para determinar la similitud entre los puntos de datos y agruparlos en clusters coherentes."
       ],
       "metadata": {
         "id": "UsHIpgYGv0dc"
